[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reportity"
version = "1.23.3"
description = "this is the best package for reports"
authors = [{ name = "Yonatan Faigenbaum", email = "fnatanoy@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    'Development Status :: 3 - Alpha',      # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    'Intended Audience :: Developers',      # Define that your audience are developers
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: MIT License',   # Again, pick a license
    'Programming Language :: Python :: 3',      #Specify which pyhton versions that you want to support
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
]
keywords = ["report", "analysis", "figures", "plot"]
dependencies = [
    "matplotlib",
    "mpld3",
    "numpy",
    "pandas",
    "plotly",
]
requires-python = ">3"

[tool.setuptools]
packages = ["reportity"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/fnatanoy/reportity"

[project.optional-dependencies]
dev = ["bumpver", "build", "twine"]

[tool.bumpver]
current_version = "1.23.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"reportity/__init__.py" = ["{version}"]
